--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <link rel="stylesheet" href="SCSS/main2.css">
     <!---------------GLITCH TEXT---------------->
 
+
+    <!-------------------FAVICON------------------->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-------------------FAVICON-------------------->
+
     <script src="JS/main.js"></script>
     <script type="text/javascript" src="JS/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="JS/bootstrap.js"></script>
@@ -108,9 +119,9 @@
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;
                         CRUIDA is a health organization dedicated to the healing and well being of others. We here at CRUIDA are dedicated to you. Everything from your mental health to your physical health and everything in between. Our doctors are in the business of making miracles happen both big and small.
                     </p>
-                    
+
                     <p>&nbsp;&nbsp;&nbsp;&nbsp; Are you sick and in need of a miracle? Please visit our contact section to send us a message and we will get back to you ASAP.</p>
-                    
+
                 </div>
 
 
@@ -246,7 +257,7 @@
 
 
 
-       <!-- <main class="center">
+        <!-- <main class="center">
             <h1>
                 In the end he
                 <span class="glitch" data-text="killed">
@@ -260,4 +271,6 @@
 
 
     </div>
-</body></html>
+</body>
+
+</html>
