--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#pagetop">CRUIDA</a>
         <a href="#aboutsection">About Us</a>
         <a href="#ourpatientssection">Our Patients</a>
-        <a href="#">Contact</a>
+        <a href="#pur">Contact</a>
     </div>
 
     <header>
@@ -227,7 +227,7 @@
 
     <div id="pur">
         <h2 id="headers">Contact Us</h2>
-        <form name="con" id="con" data-netlify="true">
+        <form name="con" id="con" netlify>
             <input id="stap" name="name" type="text" class="feedback-input" placeholder="Name" />
             <input id="stap" name="email" type="text" class="feedback-input" placeholder="Email" />
             <textarea id="stap4" name="text" class="feedback-input" placeholder="    Your Message" rows="10"></textarea>
