--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <textarea id="stap4" name="text" class="feedback-input" placeholder="    Your Message" rows="10"></textarea>
 
             <br>
-            <input type="submit" value="Submit">
+            <input id="nicebutt" type="submit" value="Submit">
 
 
             <div class="modal fade bd-example-modal-lg show" id="myModal5" role="dialog">
