--- a/innerpage1.html
+++ b/innerpage1.html
@@ -7,7 +7,7 @@
     <title>CRUIDA Health Organization</title>
 
     <meta name="description" content="Demo for CRUIDA game.">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/inner.css">
 
     <!---------------GLITCH TEXT---------------->
     <link rel="stylesheet" href="SCSS/main2.css">
@@ -46,63 +46,30 @@
     </div>
 
     <header>
-        <div id="headerbox" class="container-fluid">
+        <div id="headerbox2" class="container-fluid">
             <div class="row aline-items-center">
                 <div class="col">
 
-                    <h1>CRUIDA HEALTH ORGANIZATION</h1>
-
-                    <h2 id="toph2">WE'RE HERE FOR YOU</h2>
-
-                    <!--<a href="#"><img id="cruidagif" src="gif/reallogo.gif" alt="gif"></a> -->
 
 
-
-                    <!-- The Modal -->
-
-                    <!-- Button to open the modal login form -->
-                    <button id="transButt" onclick="document.getElementById('id01').style.display='block'"><img class="img-fluid responsive" id="cruidagif" src="gif/reallogo.gif" alt="placeholder img"></button>
-
-                    <!-- The Modal -->
-                    <div id="id01" class="modal">
+                    <div id="headerbox2" class="container-fluid">
+                        <div class="row aline-items-center">
+                            <div class="col">
 
 
-                        <!-- Modal Content -->
-                        <form id="blackplz" class="modal-content animate" action="https://youtu.be/8lnruWzkc8c">
 
-                            <div class="container">
-                                <tr>
-                                    <p id="pass">ENTERY LEVEL 0 PASSWORD REQUIRED</p>
-                                    <p>
-                                        <input type="Password" size=25 name="pwd" placeholder="ENTER PASSWORD"></p>
-                                </tr>
-                                <!--<input type="password" placeholder="Enter Password" name="pwd" required>-->
+<img class="img-fluid responsive" id="cruida" src="images/CRUIDAfirst.png" alt="placeholder img"/>
 
-                                <button type="submit" onclick="return check(this.form)" value="Login">Login</button>
-                                <label>
 
-                                </label>
+
                             </div>
 
-                            <div class="container" style="background-color:#151515">
-                                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                            </div>
-                        </form>
 
 
 
+
+                        </div>
                     </div>
-
-
-
-                </div>
-
-
-
-
-
-            </div>
-        </div>
 
 
 
@@ -145,7 +112,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <p id="patienttitle">Claire</p>
+                    <p id="patienttitle">88TQU2VC</p>
 
                     <div class="modal fade bd-example-modal-lg show" id="myModal1" role="dialog">
                         <div class="modal-dialog">
@@ -174,7 +141,7 @@
                 <div class="col-md-4">
 
 
-                    <p id="patienttitle">James</p>
+                    <p id="patienttitle">X3T89T11</p>
 
                     <div class="modal fade bd-example-modal-lg show" id="myModal2" role="dialog">
                         <div class="modal-dialog">
@@ -280,8 +247,10 @@
     <section>
         <div>
             <footer>
-<small>&copy; Copyright 2019, Cruida Health Organization</small>
+                <small>&copy; Copyright 2019, Cruida Health Organization</small>
             </footer>
         </div>
     </section>
-</body></html>
+</body>
+
+</html>
