--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
                         <!-- Modal Content -->
-                        <form id="blackplz" class="modal-content animate" action="https://youtu.be/8lnruWzkc8c">
+                        <form id="blackplz" class="modal-content animate" >
 
                             <div class="container">
                                 <tr>
@@ -78,7 +78,7 @@
                                 </tr>
                                 <!--<input type="password" placeholder="Enter Password" name="pwd" required>-->
 
-                                <button type="submit" onclick="return check(this.form)" value="Login">Login</button>
+                                <button type="submit" onclick="return check(this.form)" value="Login"><a href="innerpage1.html">Sign In</a></button>
                                 <label>
 
                                 </label>
