--- a/innerpage3.html
+++ b/innerpage3.html
@@ -176,7 +176,7 @@
 
                                     <div class="progressvids">
 
-                                        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/zCZuSeFKltE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <img class="img-fluid responsive" id="patientplaceholderimg1" src="gif/clairedead.gif" alt="placeholder img">
 
                                     </div>
 
@@ -211,8 +211,8 @@
                                     </p>
 
 
-                                    <p id="placeholdercon">Subject 88TQU2VCs condition has worsened into the RED stage today. With their current state it is unlikely that they will make it through the week. They have started to bleed from the nose as well as cry tears of blood in addition to fainting often. 
-	Something interesting worth noting however is that both 88TQU2VCs autoimmune diseases seem to have disappeared and been eaten away by some other illness, though this one is killing the subject much faster. This requires study fast as the subject is quickly fading and a living subject is preferable well it's still a possibility.
+                                    <p id="placeholdercon">Subject 88TQU2VCs condition has worsened into the RED stage today. With their current state it is unlikely that they will make it through the week. They have started to bleed from the nose as well as cry tears of blood in addition to fainting often.
+                                        Something interesting worth noting however is that both 88TQU2VCs autoimmune diseases seem to have disappeared and been eaten away by some other illness, though this one is killing the subject much faster. This requires study fast as the subject is quickly fading and a living subject is preferable well it's still a possibility.
 
 
 
@@ -223,7 +223,7 @@
                         </div>
                     </div>
 
-                    <a href="#myModal5" role="button" class="btn btn-primary" data-toggle="modal"> <img class="img-fluid responsive" id="patientplaceholderimg1" src="gif/claire1.gif" alt="placeholder img"> </a>
+                    <a href="#myModal5" role="button" class="btn btn-primary" data-toggle="modal"> <img class="img-fluid responsive" id="patientplaceholderimg1" src="gif/clairedead.gif" alt="placeholder img"> </a>
 
 
 
@@ -395,6 +395,4 @@
             </footer>
         </div>
     </section>
-</body>
-
-</html>
+</body></html>
