--- a/innerpage3.html
+++ b/innerpage3.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-------------------FAVICON-------------------->
 
-    <script src="JS/inner.js"></script>
+    <script src="JS/inner3.js"></script>
     <script type="text/javascript" src="JS/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="JS/bootstrap.js"></script>
 
@@ -106,47 +106,20 @@
 
 
 
-                    <!-- The Modal -->
-
-                    <!-- Button to open the modal login form -->
-                    <button id="transButt" onclick="document.getElementById('id01').style.display='block'"><img class="img-fluid responsive" id="congif" src="gif/about-glitch2.gif" alt="placeholder img"></button>
-
-                    <!-- The Modal -->
-                    <div id="id01" class="modal">
+                    <img class="img-fluid responsive" id="congif" src="gif/about-glitch2.gif" alt="placeholder img">
 
 
-                        <!-- Modal Content -->
-                        <form id="blackplz" class="modal-content animate">
-
-                            <div class="container">
-                                <tr>
-                                    <p id="pass">ENTERY LEVEL 0 PASSWORD REQUIRED</p>
-                                    <p>
-                                        <input type="Password" size=25 name="pwd" placeholder="ENTER PASSWORD"></p>
-                                </tr>
-                                <!--<input type="password" placeholder="Enter Password" name="pwd" required>-->
-
-                                <button type="submit" onclick="return check(this.form)" value="Login"><a href="innerpage2.html">Sign In</a></button>
-                                <label>
-
-                                </label>
-                            </div>
-
-                            <div class="container" style="background-color:#151515">
-                                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                            </div>
-                        </form>
-
-
-
-                    </div>
 
 
 
                 </div>
-            </div>
 
+
+
+            </div>
         </div>
+
+
     </section>
 
     <section id="ourpatientssection">
@@ -176,7 +149,10 @@
 
                                     <div class="progressvids">
 
-                                        <img class="img-fluid responsive" id="patientplaceholderimg1" src="gif/clairedead.gif" alt="placeholder img">
+                                        <a href="innerpage4.html"><img class="img-fluid responsive" id="patientplaceholderimg1" src="gif/clairedead.gif" alt="placeholder img"></a>
+
+
+
 
                                     </div>
 
@@ -195,28 +171,10 @@
 
                                     </p>
 
-                                    <p id="placeholdercon">Subject is getting weaker each day. This morning she went from GREEN to YELLOW. It is becoming increasingly more obvious that the predictions from earlier studies are correct. Subject 88TQU2VC will not be strong enough to survive to the second stages and therefore will not be moving to facility 2.
-                                    </p>
-
-                                    <p id="placeholdercon">
-                                        <strong>Post XX</strong><br></p>
-
-                                    <p id="placeholdercon">DATE: DATE: XX,XX,XXXX<br>
-                                        DAY OF TESTING: 81<br>
-                                        SUBJECT#: 88TQU2VC<br>
-                                        AGE: 14
-                                        ILLNESS: UNKNOWN<br>
-                                        STATUS: DIEING<br>
-                                        PROGRESS: RED<br>
+                                    <p id="placeholdercon">To the surprise of no one subject 88TQU2VC passed away in the early hours of this morning due to an unknown illness. Whatever it was seems to have liquified them from the inside… nothing more to report.
                                     </p>
 
 
-                                    <p id="placeholdercon">Subject 88TQU2VCs condition has worsened into the RED stage today. With their current state it is unlikely that they will make it through the week. They have started to bleed from the nose as well as cry tears of blood in addition to fainting often.
-                                        Something interesting worth noting however is that both 88TQU2VCs autoimmune diseases seem to have disappeared and been eaten away by some other illness, though this one is killing the subject much faster. This requires study fast as the subject is quickly fading and a living subject is preferable well it's still a possibility.
-
-
-
-                                    </p>
 
                                 </div>
                             </div>
@@ -247,20 +205,29 @@
                                     </button>
                                 </div>
                                 <div class="modal-body" id="dynamic-content">
-                                    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/bahZEK4rnRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/RJwNfyDOFf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <p id="placeholdercon">
                                         Post XX</p>
 
                                     <p id="placeholdercon"> DATE: XX,XX,XXXX<br>
-                                        DAY OF TESTING: 0<br>
-                                        SUBJECT#: X3T89T11<br>
-                                        AGE: 45<br>
-                                        ILLNESS: BLIND<br>
-                                        STATUS: LIVING<br>
-                                        PROGRESS: N/A<br></p>
+                                        DAY OF TESTING: 44<br>
+                                        SUBJECT#: 6QS4VJ89<br>
+                                        AGE: 20<br>
+                                        ILLNESS: UNKNOWN<br>
+                                        STATUS: UNKNOWN<br>
+                                        PROGRESS: YELLOW<br>
 
-                                    <p id="placeholdercon"> Subject X3T89T11 is a middle aged individual whose eyes have stopped working due to extreme trauma. Subject is possible candidate for PROJECT_VISUS_ULTRA. Additional testing needed.
+
                                     </p>
+
+                                    <p id="placeholdercon">
+                                        Subject X3T89T11s bandages came off today and as predicted they have full 20/20 vision. This is nothing short of a medical miracle considering that no eyes were ever put into the subjects head before they stitched him back up… their body seems to have done it all on their own.
+                                        NOTE: The wave in subjects brain keeps growing stronger each day...
+
+                                    </p>
+
+                                    
+
                                 </div>
                             </div>
                         </div>
@@ -289,19 +256,19 @@
 
 
 
-                                    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/_Hgnl2AzfPQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/XHElfTOeG68" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <p id="placeholdercon">
                                         Post XX</p>
 
                                     <p id="placeholdercon">DATE: XX,XX,XXXX<br>
-                                        DAY OF TESTING: 0<br>
+                                        DAY OF TESTING: 55<br>
                                         SUBJECT#: 6QS4VJ89<br>
                                         AGE: 20<br>
-                                        ILLNESS: NONE<br>
-                                        STATUS: LIVING<br>
-                                        PROGRESS: N/A</p>
+                                        ILLNESS: UNKNOWN<br>
+                                        STATUS: UNKNOWN<br>
+                                        PROGRESS: YELLOW</p>
 
-                                    <p id="placeholdercon">Subject is a young individual who is responsive and healthy. 6QS4VJ89 possesses a strong immune system. It is not often that our organization is able to get a hold of a healthy subject for testing so it is very important that this one is treated with care. They seem promising.
+                                    <p id="placeholdercon"> Subject 6QS4VJ89 is only getting worse. They won't talk, eat or sleep and despite this they have survived for nearly a week by sitting still and doing nothing. Their brain shows high activity in spite of this. Testing is needed but at this rate it looks like 6QS4VJ89 will not be with us much longer.
                                     </p>
                                 </div>
                             </div>
@@ -395,4 +362,6 @@
             </footer>
         </div>
     </section>
-</body></html>
+</body>
+
+</html>
