--- a/innerpage1.html
+++ b/innerpage1.html
@@ -66,7 +66,11 @@
 
 
 
+</div>
 
+                        </div>
+
+                        </div>
 
                         </div>
                     </div>
