--- a/innerpage2.html
+++ b/innerpage2.html
@@ -69,7 +69,11 @@
                             </div>
 
 
+</div>
 
+                        </div>
+
+                        </div>
 
 
                         </div>
