--- a/innerpage4.html
+++ b/innerpage4.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-------------------FAVICON-------------------->
 
-    <script src="JS/inner.js"></script>
+    <script src="JS/inner3.js"></script>
     <script type="text/javascript" src="JS/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="JS/bootstrap.js"></script>
 
@@ -91,12 +91,12 @@
 
                     <h2 id="headers">FACILITY ONE</h2>
 
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;
-                        You have accessed the files for facility one of the Containment and Research Unit of Interdimensional Distortions and Anomalys (C.R.U.I.D.A).
-                        Welcome Dr.<span id="conglitch" class="glitch" data-text="Ferdinan">
-                            Willis
+                    <p id="red">&nbsp;&nbsp;&nbsp;&nbsp;
+                       <b id="red"> Y̷̢̜̭͚̘̖̪̤̝̠̐̓̑̄͂̇͛̐̀͛̒̚͝o̴̢̧̢̤͓͔̙͇̟̫̤̟͎͖͋͌̔̆͂̑̄̑͑͒̇͘͝u̴̺̙͍͇͇̙̼̻̜͎͋̏͒̿̀͗̈́͂̀͋̀͝ ̵̛̫̬̦̖̜̘̻̗̬̭͐̂͐͛̀̕̚͠͝͝ͅh̵̹͙̤̣͕̱̤̪̦̑͑̍a̸̱͉̤͗͌̂v̴̧͖̺͙̲͕̞͕̥͍̯̙̍̔̄̽̓́̽̃̒͜ę̷̧͍̼͎̬̤̫̝̍̓̏̋́̓͆́ ̷̡̡̗̪̭̰̙̙̟͖͔͚̼̈̌͂̃̂̂́̌̀͆͌ȃ̵̡̡͚͔̘̯̜̬̘͍͍̖̇͛̋̀͂c̵̛̖̝͈̤̣̘̦̭̻̻̭̟͙̄̍͑͒̏̐̀̒͝ͅc̸̨͖̜̳͕̺͈̼͇͍̣͓͚͍̞̐̆̒̾̇̾e̶̢͕̙͉̯̤͇̳͓͉͕̙̲̔͌͊̍̉͘ş̷̡͔̖͓̯͍̣̤̰̰̹͚̏͜ṡ̴̡̛͚͚̻͙̘̱͖̰̾̽̾͛̅̈̽͘͜͝͝e̷̝̻̘͉̗͓̭̮̺̽͒̑͒̋̋̌̏̑͘͘͝d̸̡̧̦̖̠̯̹̜̜̪̪̭̠͙̪͊͑̔̎̀͆͋̑̄̽͘̚͝ </b>the files for facility one of the Containment and Research Unit of <b id="red">I̸̧̱̿͜n̸̳̎̌̎̆̅͆̇t̸̡̨̻͖̳̘̱̻͝e̸̡̧̘̘̼͎̝̼͓̖̺͕̓͛͐͜͝ŕ̴̗͕͔̣̺̱̰̹̺͆̓̒́̆̍̾̆͑̇͌̄d̵̛̼̾̋͆̑̆͐͗̄͘͜ì̸̡̠̣̖͖̭̠͉̫͚͚͗̈͒̂͆͝m̸̛͔̠͉͓̣͈͚̈́͂̿͐̐́̊̌͜ͅê̴̠̍͒n̴̙̑̊̉̑̐́̃̊̽͛͘͜͝s̴̡̨̝͉̙͕͉͖͓͚͆̃͊̈̃̃̇į̷̹̙̞͇͉́̈́̀̋͊̎̓͛̚̚̚o̵̡̨͇͓̟̯̬̟̙̹̺͓̥̮̚͜͝n̴̨̨̡̟̮̻̘̖͔̮͕͓͂̇̿̏͛̎̕͘͠͝ͅą̷̡̛̥͕͙̜̬͕̱͖͚̙̻͔̋̈́́̋̈̿̀̄̅̓̒̀̌͠l̵͍̮͉̺͓͋̓́ ̸̺̯̖̬̩̜͉͓̈́ͅD̸̨̨̡̮̘̱͖̀͂̔̐͠ḭ̵̢̛̯̦́͌̅͛̍͗̈́̃̉̀͋͝͝͠s̴̡̡͍̹̹̞̺̪̪̙͈̮̈́̑t̸͙̲̣͇͔̬̝̔͊̾̈́͑̕ơ̴̧̰̱̲͕͙̣̪͊͑̇̕ŕ̸̦͙̈́̿ţ̷̡̰͎̥̥̬̪̟̖͈̯̬̭̒ī̵̢̨͉̳̳͇͐̊̅̀́ǫ̷̨̩̺̭͙̻̹̣̰̯͚̹̞̳͗̔̿̎́̑n̵̲̮̗̈́͜͠͝s̸̢̭̳̯̜̣̖̻͍̗̻̺͒̊́̀͛́͒̆͌̿̽́̅̌̕ͅ ̷̧̨̡̧̡̡̣̺̳͎͇̣̮͖̩̒̓̏́ã̴̡̨͖̯͕͉̯̝̻̩͍͔̙̤̭̇́̋́͊͒͗͂̍͗ň̴̢̛͍̥͂̅̾͂̚d̶̦̫̥̫̭̜̳͎̼͖̟͍̺̮̉̾͑͑̏́̈̑̎̾̈̆͆̕ ̶̡̩͖̙͕̟̼̳͕̳͚̘̱̓̊̿̈́̓̚Å̶̛͍̤̻̦͎͕̬̬͎̣̹̻͉͑̂͝ṇ̴̹̃ő̵͔͙̰͙͙̰̹̞͍̙̰̿̌͂͊̈́͛̏̈̽̅́͋͌̄m̶̧͙͈̪͉̮͖̣̝̝͔͋̀͛̍͛̓̏͒͒͗͑̎̚͝͝a̴̢̧̨̳͙̙̺͇͔̥͍̍l̷̪͉͖̑̾̒ỷ̵̡͖̠̠̟͖͍̣̫̪̳͕̣̗͐̋̕s̸̢͓͉̻͙̲͔̫͓̻̲̖̰̋̃́̋͋̊̆͆̿͜͝ </b>(C.R.U.I.D.A).
+                        Welcome Dr.<span id="conglitch" class="glitch" data-text="F̶͇̖̝͚̗͍̼̔͜ͅẻ̶̢͔͚̝͉̝̪͍̜̮̰͙̦͚̣̿̍̂͊͊͌̋̔̚r̵̢̯̦̮̹̬͉̫̩͚̗͙̤̘̘͂́̋͒̕ḍ̵̨͙̄͆͗̈́̅͐͂̅͌͋͊͜͝͝į̴̜͔̲̔̓̀̈́̍͌́͗̂̿̉̆̔̊͘n̵̡̟͍̞̙͚̙̦̦̦̩̥͈͚͂͒̔͗́̎̿͒̒̓̓̏͒͘͝a̵̙͙͎̫̟͔̺̓̍͛̄̀ñ̵̖̣̗̏̈͗̒͛̈́">
+                            W̸̞̫̠͈̼̠̗͈̮̝͇͍̙̪̆͋̎̆̓ͅi̷̡̧̧͔̹͖̫̼̞͍̩̤͚̐͋̈́̉̌͂͐̿͆́̈́̚ͅͅĺ̶̨̫̻̺̱̊̒l̴͇̫͔̓̈́͛̔̃̂̅̓̾͒́̎͊̌̓i̸̗̻͙̱͈̮͇̳͖̥̪̯͖̇s̸̺͇̻̫̉̎́̃̚
                         </span>.
-                        Facility one is in charge of housing all human test subjects in the beginning phases and preparing them. Those that survive the beginning stages are moved to facility two. Please select the subject files you wish to view.
+                        Facility one is in charge of housing all <b id="red">h̸̨̰͖̦̞͗͛̋̓͛̐̌̏͆̏͑̕̚͝͝ͅu̶̳͊̿͒͊͒͝m̸̲͍̊̀̐̏̀̄͐̽̓͝ạ̶̜̪͍̫̼́̈́̀̀͋̃̊̾͑͜n̷̯̼̳͚͖̩̻̮̳̽̊̂̌͗̄͜ ̸̥͈͇͕̟̼͎̺͔̥̄͋͑̀̔͆͊̏̑ͅt̷̨̢͇͇̭̱̗̲̠̗̹̪̫̫̪̓̇͋̋̊͛͑̉̚e̵̞̞̥̳̻͙̼̮͂̋̐̂̇̉̀̐͆̾̏s̸̢̱̤̭͇̳̓̋͐͛̿́̊́̊̇̕͝t̶̬̱̼̀̉̐͑̄́̆̇͑̚͘͝ ̶̥̈́̀̾̀̈́͝s̴̲̩̓͒͘ų̵̼͙̞̫̳͎͚͛̽̃̏b̵̰̗̗͕͛̒͂̿͋ͅj̸͓̟͚̩̈́̐́̊͛͐̎̔ē̴̢̗̗̘̝̔̀̑͆̒̎̂͐̕͝c̵̙͚̰͙̦̖̼̪̲̞̓̉̐̊͋̄͛̃̑̈́́̽̈́̚t̸̡̰͇̳̝͈̗̮̩̗̺̑̊s̶̬̗͌̃͑͐̓͊̍̅͆͛̚͘͝ </b>in the beginning phases and preparing them. <b id="red">T̷̢̜̫̙͓̻̩͎͖͑̓̌h̷̡̼̦̹̻̣͇̩̤̞̩̜̭͍̍ȏ̴̭̣̣͉͔̌s̴̡̧̹̯̗̣̺̳̅̔ͅḝ̸̛̦͕͍̈́̈͋́̾̐̂̌̍̎͜͠͝ ̶̻̺̙͈̹̞̘́̀͆̋͒t̵̡̧̢̘̳̱̭̦̖̻̪̱̂̅̈̏̂͛̏͐͋̚̕͜͝ẖ̷̨̧̦̮͍͙̞̮̮͓̩͔̗͋̆̌̍̈́̚͜a̵̢͈̲̪̭͆̉̓̂̂̽̿̄̏̄̉̚͝͝ţ̶̣̤̻̲̻͇̼̹͈̠͇͛̂́̈́͆̍̃̆̈́́̂̚͘ ̸̧͖̣̝̩͈̺̝̪͈͎̪̤͚͍̂s̵͈̽͑͊̒̑͐̀̂́̀̾̽̽͊͠ų̶̧͙͍͍͈͍̹̳̱͉̟̗͔̱̐̔́͛̔͊̀̕̕r̴͎͖̰̠̐̐̏̏̇̅̂͝͝͝͠v̴̡̧̳̫̩̬̻̥͕̬͉̠̈́́̀̑̍̀̎̈́̄͗̕̕͜͝ḯ̴̢̯͓͔̣͈̔̆͐̔v̵̠͚̗̖̏̀̂̎̑͑̑è̶̻͉͕̲̱̦̺̘̤͕̖̃͐ </b>the beginning stages are moved to facility two. Please select <b id="red">ẗ̵̛̛̬̣̬̳̗̦́̀̅̌͐̓͑̐̉̕͝h̵̖̺̳̹̼̰̩̮͚̏̾͗̽̈́̒̚ͅe̷̺͐̒̋̇̂̑̉̾͂̈́̄ ̶̢̛̛̹̱̪̤̝͙͙̯̣̫͕̱͚͈̍̓̔̅̈́̈́s̶̹͉͓̙̳̈́̾͐̓̓u̴̳͖̭͙͓̖̐̔b̶̨̘̦̭̲͇̪̲̠̰̗̐̌̑̃̅͗̑̈́̄́̄͋̽̾͘͜ͅj̸̦̯̱̹̭͖͇̙̼͈̊́̒̐͐̆̽́̌̓͂̑̕ę̶͎̘̣̫͇̽̐̄͆̂̈́̂͊̊͐̈̚ç̸̲̣̻͋͐̏͝t̶̯̆̈̓͊͆̈</b> files you wish to view.
 
                     </p>
 
