--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         CRUIDA is a health organization dedicated to the healing and well being of others. We here at CRUIDA are dedicated to you. Everything from your mental health to your physical health and everything in between. Our doctors are in the business of making miracles happen both big and small.
                     </p>
 
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp; Are you sick and in need of a miracle? Please visit our contact section to send us a message and we will get back to you ASAP.</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp; Are you sick and in need of a miracle? Please <b>visit our contact section</b> to send us a message and we will get back to you ASAP.</p>
 
                 </div>
 
