--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <!-- The Modal -->
 
                     <!-- Button to open the modal login form -->
-                    <button id="transButt" onclick="document.getElementById('id01').style.display='block'"><img class="img-fluid responsive" id="cruidagif" src="gif/reallogo.gif" alt="placeholder img"></button>
+                    <button id="transButt" onclick="document.getElementById('id01').style.display='block'"><img class="img-fluid responsive" id="cruidagif" src="images/reallogo.png" alt="placeholder img"></button>
 
                     <!-- The Modal -->
                     <div id="id01" class="modal">
